--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,16 @@ body{
 .FreakyAhh{
     padding-top: 15%; 
 }
+
+.fing33{
+    padding-left: 15%;
+    width: 100%;
+    padding-top: 10%;
+}
+
+footer {
+    background-color: #181818;
+    padding: 10px;
+    padding-left: 15%;
+  }
+  
